# simulator

./: .clang-format  CMakeLists.txt  NETWORK_PROTOCOL.md  dependencies.cmake  project_options.cmake
.github/workflows/: ci.yml
cmake/: lto.cmake  sanitizers.cmake  warnings.cmake
src/: CMakeLists.txt  matrix.hpp  simulator.cpp  tetrion.cpp  tetrion.hpp  tetromino.hpp  vec2.hpp
src/bot/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt
src/common/include/common/: common.h
src/include/obpf/: constants.h  input.h  simulator.h  tetromino.h  tetromino_type.h  vec2.h
src/network/: CMakeLists.txt  lobby_server.cpp  message_header.hpp  messages.cpp  messages.hpp
src/network/include/network/: constants.hpp  lobby.hpp  lobby_server.hpp  message_header.hpp  message_types.hpp  messages.hpp  server.hpp  user.hpp
src/network/include/network/detail/: shared_lib_export.hpp
src/obpf/: CMakeLists.txt  lobby.cpp  simulator.cpp
src/obpf/include/obpf/: action.h  constants.h  input.h  lobby.h  rotation.h  simulator.h  stats.h  tetromino.h  tetromino_type.h  vec2.h
src/server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp  tetrion.cpp  tetrion.hpp
src/simulator/: CMakeLists.txt  garbage.cpp  log_entry.cpp  log_entry.hpp  logger.hpp  multiplayer_tetrion.cpp  observer_tetrion.cpp  rotation.hpp  tetrion.cpp  tetrion.hpp  tetromino.cpp  tetromino_type.hpp  utils.hpp  wallkicks.cpp
src/simulator/include/obpf/: input.h  tetromino_type.h  vec2.h
src/simulator/include/simulator/: action.hpp  bag.hpp  delayed_auto_shift.hpp  entry_delay.hpp  garbage.hpp  garbage_queue.hpp  input.hpp  key_state.hpp  line_clear_delay.hpp  lock_delay.hpp  logging.hpp  matrix.hpp  multiplayer_tetrion.hpp  observer_tetrion.hpp  rotation.hpp  tetrion.hpp  tetromino.hpp  tetromino_type.hpp  vec2.hpp  wallkicks.hpp
test/: CMakeLists.txt  network_tests.cpp  sandbox.cpp  sandbox2.cpp  tetrion_tests.cpp  utils.hpp
