add_library(simulator STATIC
        include/simulator/bag.hpp
        include/simulator/input.hpp
        include/simulator/matrix.hpp
        include/simulator/rotation.hpp
        include/simulator/tetrion.hpp
        include/simulator/tetromino.hpp
        include/simulator/tetromino_type.hpp
        include/simulator/vec2.hpp
        tetrion.cpp
        tetromino.cpp
        include/simulator/wallkicks.hpp
        wallkicks.cpp
        include/simulator/delayed_auto_shift.hpp
        include/simulator/lock_delay.hpp
        include/simulator/entry_delay.hpp
        include/simulator/line_clear_delay.hpp
        include/simulator/key_state.hpp
        include/simulator/action.hpp
        include/simulator/multiplayer_tetrion.hpp
        multiplayer_tetrion.cpp
        include/simulator/observer_tetrion.hpp
        observer_tetrion.cpp
        include/simulator/garbage.hpp
        garbage.cpp
)

target_include_directories(simulator
        PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/include
        ${CMAKE_CURRENT_BINARY_DIR}
)

target_link_libraries(simulator
        PUBLIC
        common
        obpf_simulator_project_options
        PRIVATE
        network
)

target_link_system_libraries(simulator
        PUBLIC
        Microsoft.GSL::GSL
        lib2k
        tl::optional
        PRIVATE
        spdlog::spdlog
        magic_enum::magic_enum
)
